examples with complex create
